@@ -1,5 +1,6 @@
 package com.somle.esb.controller;
 
+import cn.hutool.json.JSONUtil;
 import cn.iocoder.yudao.module.erp.api.product.ErpProductApi;
 import cn.iocoder.yudao.module.erp.api.product.dto.ErpProductDTO;
 import cn.iocoder.yudao.module.erp.api.product.dto.ErpSyncProductDTO;
@@ -7,9 +8,13 @@ import cn.iocoder.yudao.module.srm.api.purchase.SrmPurchaseOrderApi;
 import cn.iocoder.yudao.module.srm.api.supplier.SrmSupplierApi;
 import cn.iocoder.yudao.module.srm.api.supplier.dto.SrmSupplierDTO;
 import cn.iocoder.yudao.module.srm.enums.SrmChannelEnum;
+import com.somle.esb.converter.ErpToKingdeeConverter;
 import com.somle.esb.service.EsbService;
+import com.somle.kingdee.model.KingdeePurOrderSaveReqVO;
+import com.somle.kingdee.service.KingdeeService;
 import jakarta.annotation.Resource;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.integration.support.MessageBuilder;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -18,36 +23,36 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 
+@Slf4j
 @RestController
 @RequestMapping("/api/esb")
+@RequiredArgsConstructor
 public class EsbController {
-
-    @Autowired
-    private EsbService service;
     @Resource(name = SrmChannelEnum.SUPPLIER)
     MessageChannel tmsSupplierChannel;
-
     @Resource(name = SrmChannelEnum.PURCHASE_ORDER)
     MessageChannel purchaseOrderChannel;
-    @Autowired
-    private SrmSupplierApi srmSupplierApi;
     @Resource
     MessageChannel erpProductChannel;
-    @Autowired
-    private SrmPurchaseOrderApi srmPurchaseOrderApi;
-    @Autowired
-    private ErpProductApi erpProductApi;
+    private final SrmSupplierApi srmSupplierApi;
+    private final SrmPurchaseOrderApi srmPurchaseOrderApi;
+    private final ErpProductApi erpProductApi;
+    private final EsbService service;
+    private final ErpToKingdeeConverter erpToKingdeeConverter;
+    private final KingdeeService kingdeeService;
 
     @PostMapping("/getBeans")
     public void printAllBeans() {
         service.printAllBeans();
     }
-
 
 
 //    @PostMapping("/dataCollect")
@@ -59,7 +64,6 @@ public class EsbController {
 //        }
 //        return "success";
 //    }
-
 
 
     @PostMapping("/syncUsers")
@@ -87,8 +91,73 @@ public class EsbController {
     public String syncPurchaseOrder(@RequestParam("orderId") Long orderId) {
         // 校验订单是否存在
         srmPurchaseOrderApi.validatePurchaseOrderIds(Collections.singleton(orderId));
-        // 发送消息
-        purchaseOrderChannel.send(MessageBuilder.withPayload(Collections.singletonList(orderId)).build());
+        List<Long> set = List.of(orderId);
+        syncToKingdee(
+            set,
+            ids -> srmPurchaseOrderApi.validatePurchaseOrderIds(new HashSet<>(ids)),
+            erpToKingdeeConverter::convertOrderDTOList,
+            kingdeeService::savePurchaseOrder,
+            "采购订单",
+            KingdeePurOrderSaveReqVO::getBillNo
+        );
+        return "success";
+    }
+
+    private <T, R> void syncToKingdee(
+        List<Long> ids,
+        Function<List<Long>, List<T>> validator,
+        Function<List<T>, List<R>> converter,
+        Consumer<R> syncer,
+        String logType,
+        Function<R, Object> numberGetter
+    ) {
+        List<T> dtos = validator.apply(ids);
+        if (dtos.isEmpty()) {
+            log.warn("[{}] 未找到需要同步的信息,入参:{}", logType, JSONUtil.parse(ids));
+            return;
+        }
+        List<R> kingdeeObjs = converter.apply(dtos);
+        int total = kingdeeObjs.size();
+        int successCount = 0;
+        int failCount = 0;
+        // 收集失败的标识符
+        Set<Object> failedIdentifiers = new HashSet<>();
+
+        for (int i = 0; i < total; i++) {
+            R obj = kingdeeObjs.get(i);
+            try {
+                syncer.accept(obj);
+                successCount++;
+                log.info("[{}] 同步进度：{}/{}，唯一标识(ID)：{} - 成功", logType, i + 1, total, numberGetter.apply(obj));
+            } catch (Exception e) {
+                failCount++;
+                Object identifier = numberGetter.apply(obj);
+                failedIdentifiers.add(identifier);
+                log.error("[{}] 同步失败：{}/{}，唯一标识(ID)：{}，错误信息：{}", logType, i + 1, total, identifier, e.getMessage(), e);
+            }
+        }
+        log.info("[{}] 同步完成，共处理：{}个，成功：{}个，失败：{}个", logType, total, successCount, failCount);
+        if (failCount > 0) {
+            log.warn("[{}] 存在{}个同步失败的数据，失败的唯一标识符：{}", logType, failCount, JSONUtil.parse(failedIdentifiers));
+        }
+    }
+
+
+    /**
+     * 同步所有采购订单 -> 金蝶
+     */
+    @PostMapping("/syncAllPurchaseOrder")
+    public String syncAllPurchaseOrder() {
+        // 获取所有采购订单
+        List<Long> orderIds = srmPurchaseOrderApi.listPurchaseOrderIds();
+        syncToKingdee(
+            orderIds,
+            ids -> srmPurchaseOrderApi.validatePurchaseOrderIds(new HashSet<>(ids)),
+            erpToKingdeeConverter::convertOrderDTOList,
+            kingdeeService::savePurchaseOrder,
+            "采购订单",
+            KingdeePurOrderSaveReqVO::getBillNo
+        );
         return "success";
     }
 
